--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "firebase": "^11.1.0",
     "react-dom": "^19.0.0",
     "react-scripts": "^5.0.1"
   },
